[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Luke Jones <luke@lukeojones.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.1"
