[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Luke Jones <luke@lukeojones.com>"]
description = "A key-value store"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
exitcode = "1.1.2"
failure = { version = "0.1.8", features = ["derive"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.1"
tempfile = "3.5.0"
walkdir = "2.3.3"
